[package]
name = "builder_core"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>", "Steven Murawski <smurawski@chef.io>"]
workspace = "../../"
build = "build.rs"

[dependencies]
log = "*"
serde = "*"
statsd = "*"
toml = { version = "*", features = ["serde"], default-features = false }

[dependencies.habitat_core]
path = "../core"

[build-dependencies]
serde_codegen = "*"

[features]
functional = []
